--- a/docs/md/02.요구사항_새로운_할인정책.md
+++ b/docs/md/02.요구사항_새로운_할인정책.md
@@ -8,7 +8,7 @@
 > 순진 개발자가 정말 객체지향 설계 원칙을 잘 준수 했는지 확인해보자. 이번에는 주문한 금액의 %를
 할인해주는 새로운 정률 할인 정책을 추가하자.
 
-![img_8.png](img_8.png)
+![img_8.png](assets/img_8.png)
 
 ### RateDiscountPolicy 코드 추가
 ```java
@@ -66,15 +66,15 @@ RateDiscountPolicy discountPolicy = new RateDiscountPolicy();
 - 왜 클라이언트 코드를 변경해야 할까?
   - 클래스 다이어그램으로 의존관계를 분석해보자. 
 
-![img_9.png](img_9.png)
+![img_9.png](assets/img_9.png)
 - 지금까지 단순히 DiscountPolicy 인터페이스만 의존한다고 생각했다.
 
-![img_10.png](img_10.png)
+![img_10.png](assets/img_10.png)
 - 잘보면 클라이언트인 OrderServiceImpl 이 DiscountPolicy 인터페이스 뿐만 아니라 FixDiscountPolicy 인 구체 클래스도 함께 의존하고 있다.
 - 실제 코드를 보면 의존하고 있다! DIP 위반
 
 ### 정책 변경
-![img_11.png](img_11.png)
+![img_11.png](assets/img_11.png)
 > 중요!: 그래서 FixDiscountPolicy 를 RateDiscountPolicy 로 변경하는 순간 OrderServiceImpl 의 소스 코드도 함께 변경해야 한다! OCP 위반
 
 ### 어떻게 문제를 해결할 수 있을가?
@@ -83,7 +83,7 @@ RateDiscountPolicy discountPolicy = new RateDiscountPolicy();
 - DIP 위반 추상에만 의존하도록 변경(인터페이스에만 의존)
 - DIP 를 위반하지 않도록 인터페이스에만 의존하도록 의존관계를 변경하면 된다.
 
-![img_12.png](img_12.png)
+![img_12.png](assets/img_12.png)
 
 
 인터페이스에만 의존하도록 코드 변경
