--- a/docs/md/04. AppConfig 리펙터링.md
+++ b/docs/md/04. AppConfig 리펙터링.md
@@ -1,7 +1,7 @@
 ### AppConfig 리팩터링
 - 현재 AppConfig를 보면 중복이 있고, 역할에 따른 구현이 잘 안보인다.
 
-![img_15.png](img_15.png)
+![img_15.png](assets/img_15.png)
 
 ```java
 public class AppConfig {
@@ -29,16 +29,16 @@ public class AppConfig {
 
 Command + Option + M
 
-![img_16.png](img_16.png)
+![img_16.png](assets/img_16.png)
 
 ### 새로운 구조와 할인 정책 적용
 - 처음으로 돌아가서 정액 할인 정책을 정률% 할인 정책으로 변경해보자. FixDiscountPolicy RateDiscountPolicy
 - 어떤 부분만 변경하면 되겠는가?
 - AppConfig 의 등장으로 애플리케이션이 크게 사용 영역과, 객체를 생성하고 구성(Configuration)하는 영역으로 분리되었다.
 
-![img_17.png](img_17.png)
+![img_17.png](assets/img_17.png)
  
-![img_18.png](img_18.png)
+![img_18.png](assets/img_18.png)
 
 - FixDiscountPolicy RateDiscountPolicy 로 변경해도 구성 영역만 영향을 받고, 사용 영역은 전혀 영향을 받지 않는다.
 
