--- a/docs/md/08. SpringBean, Spring Container.md
+++ b/docs/md/08. SpringBean, Spring Container.md
@@ -15,21 +15,21 @@ ApplicationContext applicationContext = new  AnnotationConfigApplicationContext(
 >  참고: 더 정확히는 스프링 컨테이너를 부를 때 BeanFactory , ApplicationContext 로 구분해서 이야기한다. 이 부분은 뒤에서 설명하겠다. BeanFactory 를 직접 사용하는 경우는 거의 없으므로 일반적으로 ApplicationContext 를 스프링 컨테이너라 한다.
 
 # 스프링 컨테이너의 생성 과정
-![img_21.png](img_21.png)
+![img_21.png](assets/img_21.png)
 - new AnnotationConfigApplicationContext(AppConfig.class)
 - 스프링 컨테이너를 생성할 때는 구성 정보를 지정해주어야 한다.
 - 여기서는 AppConfig.class 를 구성 정보로 지정했다.
 
-![img_22.png](img_22.png)
+![img_22.png](assets/img_22.png)
 - 스프링 컨테이너는 파라미터로 넘어온 설정 클래스 정보를 사용해서 스프링 빈을 등록한다.
   - 빈 이름
   - 빈 이름은 메서드 이름을 사용한다. 빈 이름을 직접 부여할 수 도 있다.
 - @Bean(name="memberService2")
 > 주의: 빈 이름은 항상 다른 이름을 부여해야 한다. 같은 이름을 부여하면, 다른 빈이 무시되거나, 기존 빈을 덮어버리거나 설정에 따라 오류가 발생한다.
 
-![img_23.png](img_23.png)
+![img_23.png](assets/img_23.png)
 
-![img_24.png](img_24.png)
+![img_24.png](assets/img_24.png)
 - 스프링 컨테이너는 설정 정보를 참고해서 의존관계를 주입(DI)한다.
 - 단순히 자바 코드를 호출하는 것 같지만, 차이가 있다. 이 차이는 뒤에 싱글톤 컨테이너에서 설명한다.
 
