--- a/docs/md/10.컴포넌트_스캔.md
+++ b/docs/md/10.컴포넌트_스캔.md
@@ -20,3 +20,18 @@ public class AutoAppConfig {
 
 컴포넌트 스캔은 이름 그대로 @Component 애노테이션이 붙은 클래스를 스캔해서 스프링 빈으로 등록한다. @Component 를 붙여주자.
 > 참고: @Configuration 이 컴포넌트 스캔의 대상이 된 이유도 @Configuration 소스코드를 열어보면 @Component 애노테이션이 붙어있기 때문이다.
+
+![img.png](img.png)
+- @ComponentScan 은 @Component 가 붙은 모든 클래스를 스프링 빈으로 등록한다.
+- 이때 스프링 빈의 기본 이름은 클래스명을 사용하되 맨 앞글자만 소문자를 사용한다.
+- 빈 이름 기본 전략: MemberServiceImpl 클래스 memberServiceImpl
+- 빈 이름 직접 지정: 만약 스프링 빈의 이름을 직접 지정하고 싶으면 @Component("memberService2") 이런식으로 이름을 부여하면 된다.
+
+## @Autowired 의존관계 자동 주입
+![img_1.png](img_1.png)
+- 생성자에 @Autowired 를 지정하면, 스프링 컨테이너가 자동으로 해당 스프링 빈을 찾아서 주입한다.
+- 이때 기본 조회 전략은 타입이 같은 빈을 찾아서 주입한다.
+- getBean(MemberRepository.class) 와 동일하다고 이해하면 된다.
+
+![img_2.png](img_2.png)
+- 생성자에 파라미터가 많아도 다 찾아서 자동으로 주입한다.
